tests/baselines/reference/letInVarDeclOfForOf_ES6.errors.txt
tests/cases/compiler/letInVarDeclOfForOf_ES6.ts(2,17): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
tests/cases/compiler/letInVarDeclOfForOf_ES6.ts(5,18): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/compiler/letInVarDeclOfForOf_ES6.ts (2 errors) ====
    // should not be an error
    for (var let of [1,2,3]) {}
                    ~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    
    {
    	for (var let of [1,2,3]) {}
    	                ~~~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    }
    